@@ -6,7 +6,7 @@ import org.mmbase.storage.search.implementation.*;
 
 /**
  * @javadoc
- * @version $Id: GetRelation.java,v 1.2 2008-10-15 15:45:55 michiel Exp $
+ * @version $Id: GetRelation.java,v 1.3 2009-01-02 09:36:10 michiel Exp $
  */
 public class GetRelation {
     /**
@@ -19,8 +19,8 @@ public class GetRelation {
         StepField dnumber = query.getStepField(settingManager.getField("dnumber"));
 
         // Relation from 'people' to 'components'
-        BasicFieldValueConstraint constraint2 = new BasicFieldValueConstraint(snumber, new Integer(snum));
-        BasicFieldValueConstraint constraint1 = new BasicFieldValueConstraint(dnumber, new Integer(dnum));
+        BasicFieldValueConstraint constraint2 = new BasicFieldValueConstraint(snumber, Integer.valueOf(snum));
+        BasicFieldValueConstraint constraint1 = new BasicFieldValueConstraint(dnumber, Integer.valueOf(dnum));
         BasicCompositeConstraint constraint = new BasicCompositeConstraint(CompositeConstraint.LOGICAL_AND);
         constraint.addChild(constraint1).addChild(constraint2);
         query.setConstraint(constraint);
@@ -37,7 +37,7 @@ public class GetRelation {
         StepField snumber = query.getStepField(settingManager.getField("snumber"));
 
         // Relation from 'people' to 'components'
-        BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(snumber, new Integer(snum));
+        BasicFieldValueConstraint constraint = new BasicFieldValueConstraint(snumber, Integer.valueOf(snum));
         query.setConstraint(constraint);
         return settingManager.getList(query);
     }
